<resources>
    <string name="app_name">TAREA17S2120222DSE</string>
    <string name="datos">Datos</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="correo">Correo</string>
    <string name="hitnombre">Aqui saldra el Nombre</string>
    <string name="hitedad">Aqui saldra la Edad</string>
    <string name="hitcorreo">Aqui saldra el Correo</string>
    <string name="inombre">Ingresa tu Nombre:</string>
    <string name="iedad">Ingresa tu Edad:</string>
    <string name="icorreo">Ingresa tu Correo:</string>
    <string name="hitnombrep2">Aqui coloca el Nombre</string>
    <string name="hitedadp2">Aqui coloca la Edad</string>
    <string name="hitcorreop2">Aqui coloca el Correo</string>
    <string name="btn1p2">Capturar</string>
    <string name="btn2p2">Regresar</string>

</resources>